--- a/src/components/MenuComponent/Menu.comp.css
+++ b/src/components/MenuComponent/Menu.comp.css
@@ -44,9 +44,10 @@
 .menu-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: start;
   gap: 25px;
   width: 100%;
+  padding-left: 30px;
 }
 
 /* Individual menu item styling */
