--- a/src/components/profile-card/ProfileCard.comp.css
+++ b/src/components/profile-card/ProfileCard.comp.css
@@ -36,15 +36,10 @@
   height: 100vh;
   width: 100vw;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 12px;
-  box-shadow: 12px;
+  top: 0;
+  left: 0;
   background-color: #00000080;
   z-index: 100;
-  box-shadow: 0 0 10px #000000a1;
-  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
