--- a/src/pages/restaurant/CreateMenu/CreateMenu.res.css
+++ b/src/pages/restaurant/CreateMenu/CreateMenu.res.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
+  gap: 18px;
 }
 
 .image-upload {
@@ -96,4 +97,17 @@
 .draft-button {
   background-color: #c97e10;
   color: white;
+}
+
+.check-area,
+.dish-pricing-area {
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.upload-description {
+  height: 90px;
+  resize: none;
 }
