--- a/src/pages/customer/Menus/Menu.cus.css
+++ b/src/pages/customer/Menus/Menu.cus.css
@@ -16,6 +16,12 @@
   display: none;
 }
 
+.menu-span-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .menu-item-area,
 .menu-item-area-animated {
   display: flex;
@@ -25,6 +31,8 @@
   gap: 10px;
   border: 1px solid #00000036;
   transition: 0.14s ease-in-out;
+  max-width: 800px;
+  width: 90%;
 }
 
 .add-animation {
