--- a/src/var.css
+++ b/src/var.css
@@ -1,10 +1,10 @@
 :root {
   --green: #43AF8E;
   --red: #F61C1C;
-  --orange: #F68707;
-  --blue: #1191D0;  
+  --Orange: #F96305;
+  --blue: #1191D0;
   --dark-blue: #03557E;
-  --orange: #F68707; 
+  --orange: #F68707;
   --black: #000;
   --white: #fff;
   --gray: #D9D9D9;
