removed ratings and minor touches

--- a/src/pages/customer/Dish/Dish.cus.css
+++ b/src/pages/customer/Dish/Dish.cus.css
@@ -1,139 +1,139 @@
-.cus-dish-main {
-  height: calc(100vh - 60px);
-  width: 100%;
-  /* background-color: aqua; */
-  overflow: auto;
-}
+ .cus-dish-main {
+   height: calc(100vh - 60px);
+   width: 100%;
+   /* background-color: aqua; */
+   overflow: auto;
+ }
 
-.cus-dish-main-child {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  gap: 20px;
+ .cus-dish-main-child {
+   display: flex;
+   justify-content: start;
+   align-items: center;
+   flex-direction: column;
+   width: 100%;
+   gap: 20px;
 
-}
+ }
 
-.cus-dish-area,
-.cus-dish-area-loading {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #D9D9D9;
-  width: 90%;
-  height: 50vh;
-  min-height: 300px;
-  min-width: 230px;
-  margin-top: 20px;
-  border-radius: 12px;
-  padding: 20px 0;
+ .cus-dish-area,
+ .cus-dish-area-loading {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   background-color: #D9D9D9;
+   width: 90%;
+   height: 50vh;
+   min-height: 300px;
+   min-width: 230px;
+   margin-top: 20px;
+   border-radius: 12px;
+   padding: 20px 0;
 
-}
+ }
 
-.cus-dish-area {
-  background-color: transparent;
-  border: 1px solid black;
-  max-width: 800px;
-  min-height: 200px;
-  height: 45vh;
-  overflow: hidden;
-}
+ .cus-dish-area {
+   background-color: transparent;
+   border: 1px solid black;
+   max-width: 800px;
+   min-height: 200px;
+   height: auto;
+   overflow: hidden;
+ }
 
-.cus-dish-area img,
-.cus-dish-area-loading img {
-  width: 70%;
-  aspect-ratio: 4/3;
-  object-fit: cover;
-  filter: grayscale(100%);
-  opacity: 0.6;
-  border-radius: 16px;
-  max-width: 400px;
-}
+ .cus-dish-area img,
+ .cus-dish-area-loading img {
+   width: 70%;
+   aspect-ratio: 4/3;
+   object-fit: cover;
+   filter: grayscale(100%);
+   opacity: 0.6;
+   border-radius: 16px;
+   max-width: 400px;
+ }
 
-.cus-dish-area-loading img,
-.cus-dish-area-loading section {
-  animation: fadeOut 2s ease-in-out infinite;
-}
+ .cus-dish-area-loading img,
+ .cus-dish-area-loading section {
+   animation: fadeOut 2s ease-in-out infinite;
+ }
 
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
+ @keyframes fadeOut {
+   0% {
+     opacity: 1;
+   }
 
-  15% {
-    opacity: 0.8;
-  }
+   15% {
+     opacity: 0.8;
+   }
 
-  30% {
-    opacity: 0.7;
-  }
+   30% {
+     opacity: 0.7;
+   }
 
-  45% {
-    opacity: 0.6;
-  }
+   45% {
+     opacity: 0.6;
+   }
 
-  60% {
-    opacity: 0.5;
-  }
+   60% {
+     opacity: 0.5;
+   }
 
-  75% {
-    opacity: 0.6;
-  }
+   75% {
+     opacity: 0.6;
+   }
 
-  90% {
-    opacity: 0.7;
-  }
+   90% {
+     opacity: 0.7;
+   }
 
-  100% {
-    opacity: 0.8;
-  }
-}
-
-
-#cus-dishMain-food-img {
-  filter: grayscale(0%);
-  opacity: 1;
-}
+   100% {
+     opacity: 0.8;
+   }
+ }
 
 
-.cus-dishmain-text-section,
-.cus-dishmain-text-section-loading {
-  margin: 20px;
-  border-radius: 16px;
-  padding: 20px;
-  background-color: #A3A3A3;
-  min-height: 10vh;
-  width: 80%;
-  overflow: hidden;
-}
-
-.cus-dishmain-text-section {
-  background-color: transparent;
-}
+ #cus-dishMain-food-img {
+   filter: grayscale(0%);
+   opacity: 1;
+ }
 
 
-.review-stars {
-  font-size: 4rem;
-  color: #ffbb00;
-}
+ .cus-dishmain-text-section,
+ .cus-dishmain-text-section-loading {
+   margin: 20px;
+   border-radius: 16px;
+   padding: 20px;
+   background-color: #A3A3A3;
+   min-height: 10vh;
+   width: 80%;
+   overflow: hidden;
+ }
 
-.all-reviews-arre {
-  height: calc(100vh - 60px);
-  width: 100%;
-  background-color: #D9D9D9;
-}
+ .cus-dishmain-text-section {
+   background-color: transparent;
+ }
 
-.give-review {
-  width: calc(90% - 20px);
-  padding: 10px;
-  height: 100px;
-  resize: none;
-}
 
-#reviewer-name {
-  width: calc(90% - 10px);
-  font-size: 16px;
-  padding: 10px 5px;
-}
+ .review-stars {
+   font-size: 4rem;
+   color: #ffbb00;
+ }
+
+ .all-reviews-arre {
+   height: calc(100vh - 60px);
+   width: 100%;
+   background-color: #D9D9D9;
+ }
+
+ .give-review {
+   width: calc(90% - 20px);
+   padding: 10px;
+   height: 100px;
+   resize: none;
+ }
+
+ #reviewer-name {
+   width: calc(90% - 10px);
+   font-size: 16px;
+   padding: 10px 5px;
+ }
