--- a/src/components/Navbar/Navbar.comp.css
+++ b/src/components/Navbar/Navbar.comp.css
@@ -5,10 +5,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
   gap: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
   width: calc(100vw - 40px);
-  padding: 20px;
+  height: 100%;
   color: var(--white);
   font-family: sans-serif;
 }
