--- a/src/components/MenuComponent/Menu.comp.css
+++ b/src/components/MenuComponent/Menu.comp.css
@@ -45,10 +45,9 @@
 .menu-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: space-evenly;
   gap: 25px;
   width: 100%;
-  padding-left: 85px;
 }
 
 /* Individual menu item styling */
