--- a/src/pages/landing/Home/Home.land.css
+++ b/src/pages/landing/Home/Home.land.css
@@ -16,10 +16,10 @@
   justify-content: space-between;
   align-items: center;
   width: calc(100% - 80px);
-  flex-wrap: nowrap;
   padding: 0 40px;
   height: 90px;
   border-bottom: 1px solid var(--green);
+
 }
 
 .landing-nav-area h1 {
@@ -60,7 +60,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: aqua; */
+  flex-wrap: wrap;
   padding: 20px;
   height: auto;
 }
@@ -196,7 +196,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: start;
+  justify-content: center;
+  align-items: center;
 }
 
 .all-list-of-features section {
@@ -227,4 +228,172 @@
   font-size: 25px;
   text-align: center;
   width: 90%;
+}
+
+.bring-your-menu {
+  text-align: center;
+}
+
+@media (max-width:1000px) {
+  .landing-nav-area button {
+    display: none;
+  }
+
+  .landing-section {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    gap: 100px;
+  }
+
+  .landing-main-child {
+    margin: 0;
+    justify-content: start;
+  }
+
+  .landing-main-text-area,
+  .landing-main-logo-area {
+    flex: none;
+    /* background-color: aqua; */
+  }
+
+  .landing-heading {
+    font-size: 50px;
+
+  }
+
+  .landing-logo {
+    width: 50%;
+  }
+
+  .lading-restaurant-types-slideShow {
+    width: 98%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+
+
+  .lading-restaurant-types-slideShow p {
+    overflow: hidden;
+    text-align: center;
+    font-size: 1.25rem;
+    padding: 15px;
+    margin: 0;
+    width: calc(100% / 5);
+    min-width: 180px;
+  }
+
+  .get-started-btn {
+    width: 50%;
+  }
+}
+
+@media (max-width:490px) {
+  .landing-nav-area {
+    padding: 0 5px;
+    width: calc(100% - 10px);
+  }
+
+  .landing-nav-area h1 a {
+    font-size: 18px;
+  }
+
+  .landing-nav-area ul a {
+    font-size: 15px;
+  }
+
+  .nav-logo {
+    width: 50px;
+  }
+
+  .landing-nav-area button {
+    display: none;
+  }
+
+  .landing-section {
+    height: calc(100vh - 140px);
+    justify-content: space-around;
+  }
+
+  .landing-heading {
+    font-size: 2.5rem;
+  }
+
+  .get-started-btn {
+    width: 90%;
+    font-size: 1.55rem;
+  }
+
+  .landing-logo {
+    width: 80%;
+  }
+
+  .bring-your-menu {
+    font-size: 1.3rem;
+  }
+
+  .landing-features-section h1 {
+    font-size: 1.05rem;
+    width: 80%;
+  }
+
+  .listof-features {
+    width: 70%;
+    font-size: 1.35rem;
+  }
+
+  .all-list-of-features section {
+    height: auto;
+    padding-bottom: 50px;
+  }
+
+  .all-list-of-features section img {
+    width: 100px;
+  }
+}
+
+@media (max-width:330px) {
+
+  .landing-nav-area {
+    justify-content: center;
+  }
+
+  .landing-nav-area h1 a {
+    font-size: 25px;
+
+  }
+
+  .nav-logo {
+    width: 50px;
+  }
+
+  .landing-nav-area ul {
+    display: none;
+  }
+
+  .landing-section {
+    height: 50vh;
+    /* background-color: #dadada; */
+    justify-content: start;
+  }
+
+  .landing-main-child {
+    height: auto;
+    flex: none;
+  }
+
+  .landing-heading,
+  .get-started-btn {
+    font-size: 1.24rem;
+  }
+
+  .landing-start-your-journery h1 {
+    font-size: 1.13rem;
+  }
 }
