--- a/src/components/DishDetail/DishDetail.comp.css
+++ b/src/components/DishDetail/DishDetail.comp.css
@@ -1,3 +1,5 @@
+@import url("../../var.css");
+
 /* Main container */
 .dish-detail-container {
   display: flex;
@@ -19,14 +21,41 @@
   flex: 1;
   text-align: center;
   margin-bottom: 20px;
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
+
 
 .dish-image {
   width: 200px;
   height: 200px;
   border-radius: 8px;
   object-fit: cover;
+  overflow: hidden;
 }
+
+.image-edit-btn {
+  position: absolute;
+  background-color: #d9d9d971;
+  height: 200px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 800;
+  overflow: hidden;
+  color: var(-black);
+}
+
+.image-edit-btn input {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  height: 200px;
+  width: 200px;
+}
+
 
 /* Info section */
 .dish-info-section {
@@ -124,11 +153,23 @@
   border-radius: 4px;
 }
 
-/* @media (min-width:1100px) {
-  .dish-detail-container {
-    width: 90vw;
-  }
-} */
+.edit-dish-price-input {
+  width: 150px;
+  padding: 5px;
+  font-size: 18px;
+  border-radius: 4px;
+  border: 1px solid black;
+  margin-right: 5px;
+
+}
+
+.edited-data-button {
+  padding: 10px;
+  border: none;
+  border-radius: 6px;
+  background-color: #ffffff9f;
+
+}
 
 /* Responsive styling */
 @media (min-width: 768px) {
