--- a/src/components/DishDetail/DishDetail.comp.css
+++ b/src/components/DishDetail/DishDetail.comp.css
@@ -164,11 +164,17 @@
 }
 
 .edited-data-button {
-  padding: 10px;
-  border: none;
-  border-radius: 6px;
-  background-color: #ffffff9f;
+  padding: 4px;
+  color: #aa0000;
+  background-color: transparent;
+  border: navajowhite;
+  font-weight: 900;
+}
 
+.add-new-description {
+  width: 300px;
+  height: 60px;
+  resize: none;
 }
 
 /* Responsive styling */
