--- a/src/components/MenuComponent/Menu.comp.css
+++ b/src/components/MenuComponent/Menu.comp.css
@@ -34,29 +34,28 @@
 }
 
 .parent-menu-container {
-  width: 100%;
+  width: 95vw;
   padding-bottom: 20px;
-  /* background-color: #4CAF50 */
+  /* background-color: #4CAF50; */
   overflow: hidden;
   display: flex;
   justify-content: space-between;
+  margin: 0 auto;
 }
 
 .menu-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   gap: 25px;
-  width: 100%;
+  width: 90%;
+  margin: 0 auto;
 }
 
 /* Individual menu item styling */
 .menu-item {
-  flex: 1 1 calc(20% - 15px);
-  /* 5 items per row */
-  width: 280px;
+  width: 250px;
   height: 200px;
-  max-width: 280px;
+  max-width: 250px;
   border: 1px solid #ddd;
   padding: 15px;
   margin: 10px;
@@ -89,7 +88,7 @@
 
 .menu-item img {
   width: 100%;
-  hei: 100%;
+  height: 100%;
   max-width: 200px;
   max-height: 200px;
   border-radius: 8px;
@@ -163,6 +162,38 @@
   border: none;
 }
 
+.filter-dish-section {
+  display: flex;
+  flex-wrap: wrap;
+  height: auto;
+  justify-content: start;
+  align-items: center;
+  padding: 10px;
+  gap: 15px;
+}
+
+.filter-dish-section-btns {
+  width: auto;
+  padding: 10px;
+  font-size: 16px;
+  /* background-color: transparent; */
+  border: none;
+  cursor: pointer;
+  transition: 0.200s ease-in-out;
+}
+
+.filter-dish-section-btns:hover {
+  transform: scale(1.03);
+  box-shadow: 0 0 10px 0 #00000073;
+  border-radius: 8px;
+}
+
+.active-filter {
+  background-color: #000;
+  color: #fff;
+  transform: scale(1.03);
+  border-radius: 8px;
+}
 
 @media (max-width: 1000px) {
   .menu-item-header {
