--- a/src/pages/customer/Components/Navbar/Navbar.comp.css
+++ b/src/pages/customer/Components/Navbar/Navbar.comp.css
@@ -1,11 +1,12 @@
 .navbar {
-  background-color: #1191D0;
+  background-color: #000000;
   height: 40px;
   align-items: center;
   color: white;
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  position: relative;
 }
 
 .navbar-title {
@@ -28,9 +29,9 @@
 }
 
 .navbar img {
-  width: 34px;
-  filter: invert(100%);
+  width: 38px;
   cursor: pointer;
+  filter: invert(100%) brightness(200%);
 }
 
 
@@ -53,25 +54,48 @@
   /* Slide into view */
 }
 
-.togglebar ul {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  height: 80%;
-  margin-top: 30px;
-  gap: 10px;
-  list-style: none;
-  justify-content: space-between;
-}
-
-.togglebar ul li {
-  list-style: none;
-  padding: 10px 20px;
-  width: 100%;
-  text-align: center;
-}
-
 .list-active {
   background-color: #005680;
   color: #fff;
+}
+
+.nav-category-area {
+  position: absolute;
+  top: 60px;
+  right: -100%;
+  height: calc(100vh - 60px);
+  width: 100%;
+  background-color: #83838373;
+  z-index: 100;
+  display: flex;
+  justify-content: end;
+  transition: 0.200s ease-in-out;
+  backdrop-filter: blur(3px);
+}
+
+.nav-category-area section {
+  background-color: #1190d0e3;
+  width: 50%;
+  padding: 15px;
+}
+
+.nav-category-area section h1 {
+  text-align: center;
+  font-family: Bebas Neue;
+  font-size: 30px;
+  font-weight: 100;
+  letter-spacing: 2px;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+.menu-item-category-list {
+  padding: 10px;
+  border-radius: 3px;
+  cursor: default;
+}
+
+.menu-list-active {
+  background-color: #005680;
+  text-align: center;
 }
