--- a/src/pages/customer/Dish/Dish.cus.css
+++ b/src/pages/customer/Dish/Dish.cus.css
@@ -1,6 +1,6 @@
  .cus-dish-main {
    height: calc(100vh - 60px);
-   width: 100%;
+   width: 100vw;
    /* background-color: aqua; */
    overflow: auto;
  }
@@ -136,4 +136,20 @@
    width: calc(90% - 10px);
    font-size: 16px;
    padding: 10px 5px;
+ }
+
+ .cus-menu-span-container {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   height: auto;
+ }
+
+ .cus-menu-span-container-child {
+   width: 98%;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
  }
