--- a/src/pages/customer/Menus/Menu.cus.css
+++ b/src/pages/customer/Menus/Menu.cus.css
@@ -4,12 +4,12 @@
   align-items: center;
 }
 
-.cus-menu-section {
-  height: calc(100vh - 90px);
+.cus-menu-section,
+.cus-menu-section-child {
+  height: calc(100vh - 60px);
   width: 100%;
   overflow: auto;
   /* background-color: aqua; */
-
 }
 
 .cus-menu-section::-webkit-scrollbar {
