--- a/src/pages/customer/Dish/Dish.cus.css
+++ b/src/pages/customer/Dish/Dish.cus.css
@@ -116,18 +116,22 @@
    left: 0;
    top: 0;
    width: 100%;
-   height: calc(100vh - 10px);
-   background-color: #00000054;
+   height: 100%;
+   background-color: #000000ce;
    z-index: 99;
+   overflow: hidden;
+   transition: 0.200s ease-in-out;
  }
 
  .active-image {
    position: absolute;
    left: 50%;
-   top: 50%;
+   top: 40%;
    transform: translate(-50%, -50%);
    width: 95%;
+   height: 400px;
    z-index: 100;
+   border-radius: 5px;
  }
 
  .cus-dishmain-text-section,
@@ -145,6 +149,14 @@
    background-color: transparent;
  }
 
+ .cus-dishmain-text-section h1 {
+   font-size: 14px;
+ }
+
+ .cus-dishmain-text-section p {
+   font-size: 12px;
+   margin-top: 5px;
+ }
 
  .review-stars {
    font-size: 4rem;
